@startuml

title __STUDENT's Class Diagram__\n

  namespace com.fyp {
    namespace student {
      class com.fyp.student.DistanceFailedActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.fyp {
    namespace student {
      class com.fyp.student.DistanceSuccessActivity {
          ~ btn_next : Button
          ~ tv_distance : TextView
          # onCreate()
      }
    }
  }
  

  namespace com.fyp {
    namespace student {
      class com.fyp.student.RecognizeSuccess {
          ~ btn_finish : Button
          ~ tickView : TickView
          ~ tv_recognize_success : TextView
          # onCreate()
      }
    }
  }
  

  namespace com.fyp {
    namespace student {
      class com.fyp.student.Student_MainActivity {
          ~ mNavigationController : NavigationController
          ~ pageNavigationView : PageNavigationView
          ~ testColors : int[]
          ~ viewPager : ViewPager
          + onRequestPermissionsResult()
          # onCreate()
          - initMaterialDrawer()
      }
    }
  }
  

  namespace com.fyp {
    namespace student {
      class com.fyp.student.QRscanActivity {
          ~ btn_scan : Button
          ~ imageView_QRCode : ImageView
          ~ location : Location
          ~ tv_distance : TextView
          + onRequestPermissionsResult()
          # onActivityResult()
          # onCreate()
          - getLastKnownLocation()
          - getLocation()
          - getLocationLL()
      }
    }
  }
  

  com.fyp.student.DistanceFailedActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.student.DistanceSuccessActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.student.RecognizeSuccess -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.student.Student_MainActivity -up-|> com.heinrichreimersoftware.materialdrawer.DrawerActivity
  com.fyp.student.locationActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
